--- a/wp-content/themes/wingman/assets/css/woocommerce.scss
+++ b/wp-content/themes/wingman/assets/css/woocommerce.scss
@@ -2085,16 +2085,18 @@ body{
     }
   }
 
-  .woocommerce{
-    ul.shop-products{
-      li.product{
-        padding-bottom: 0;
-      }
-      h3{
-        a{
-          color: $white;
-          &:hover{
-            color: $primary-color;
+  &.carousel-light{
+    .woocommerce{
+      ul.shop-products{
+        li.product{
+          padding-bottom: 0;
+        }
+        h3{
+          a{
+            color: $white;
+            &:hover{
+              color: $primary-color;
+            }
           }
         }
       }
