--- a/wp-content/themes/wingman/assets/css/style.scss
+++ b/wp-content/themes/wingman/assets/css/style.scss
@@ -1131,6 +1131,7 @@ body.layout-boxed{
 
   .owl-pagination{
     margin-top: 40px;
+    text-align: center;
     .owl-page{
       background: $icon-list;
       height: 8px;
@@ -2798,10 +2799,11 @@ article.post-item.post-layout-classic {
 /**
 * 5.1. Testimonials
 **/
-.clients-carousel-wrapper,
+
 .testimonial-carousel-wrapper{
   text-align: center;
   margin-bottom: 30px;
+  position: relative;
 }
 
 .testimonial-rate{
@@ -2811,12 +2813,14 @@ article.post-item.post-layout-classic {
   line-height: 16px;
   margin: 0 auto;
   position: relative;
+  letter-spacing: 0.2em;
+  display: none;
+
   &:after{
     font-family: FontAwesome;
     content: "\f005 \f005 \f005 \f005 \f005";
     font-size: 12px;
     color: $gray;
-    letter-spacing: 0.1em;
   }
   span{
     position: absolute;
@@ -2829,12 +2833,16 @@ article.post-item.post-layout-classic {
       font-family: FontAwesome;
       font-size: 12px;
       color: $primary-color;
-      letter-spacing: 0.1em;
     }
   }
-  &.rate-0{
-    display: none;
+  &.rate-1,
+  &.rate-2,
+  &.rate-3,
+  &.rate-4,
+  &.rate-5{
+    display: block;
   }
+
   &.rate-1{
     span:after{
       content: "\f005";
@@ -2871,14 +2879,11 @@ article.post-item.post-layout-classic {
     max-width: 830px;
     margin: 0 auto;
     &:after{
-      font-family: FontAwesome;
-      content: '\f10d';
+      @include FontAwesome('\f10d');
       font-size: 60px;
       line-height: 60px;
-      position: absolute;
-      left: 50%;
-      @include transform(translatex(-50%));
-      color: $border-color;
+      @include translate(x);
+      color: rgba($black, .1);
     }
   }
   .testimonial-author{
@@ -2886,6 +2891,14 @@ article.post-item.post-layout-classic {
     font-size: 30px;
     letter-spacing: 0;
     margin-bottom: 0;
+    line-height: 34px;
+    color: $black;
+    a{
+      color: $black;
+      &:hover{
+        color: $primary-color;
+      }
+    }
   }
   .testimonial-info{
     font-size: 13px;
@@ -2911,9 +2924,19 @@ article.post-item.post-layout-classic {
     }
   }
 }
+
+
 .testimonial-carousel-skin-light{
   .testimonial-item{
+
+    .testimonial-content{
+      &:after{
+        color: rgba($white, .1);
+      }
+    }
+
     .testimonial-author{
+      color: $white;
       a{
         color: $white; 
       }
@@ -2921,20 +2944,17 @@ article.post-item.post-layout-classic {
     .testimonial-rate{
       span{
         &:after{
-          color: #ec6aec;
+          color: $primary-color;
         }
       }
     }
   }
 }
+
 .testimonial-carousel-wrapper{
   .owl-carousel-kt {
     .owl-pagination{
-      position: absolute;
-      top:-125px;
-      left: 50%;
-      margin: 0;
-      @include transform(translatex(-50%));
+      margin: 0 0 50px;
       .owl-page{
         width: 70px;
         height: 70px;
@@ -2945,9 +2965,25 @@ article.post-item.post-layout-classic {
         &.active{
           @include transform(scale(1.4));
         }
+        img{
+          filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
+          filter: gray; /* IE6-9 */
+          -webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */
+          @include transition();
+        }
+        &.active,
+        &:hover{
+          img{
+            filter: none;
+            -webkit-filter: grayscale(0%);
+          }
+        }
       }
     } 
   }
+}
+.clients-carousel-wrapper{
+
 }
 
 /**
@@ -3036,10 +3072,6 @@ article.post-item.post-layout-classic {
       }
     }
 
-
-    .kt-heading-content{
-      text-transform: uppercase;
-    }
   }
 
 
@@ -3207,7 +3239,7 @@ article.post-item.post-layout-classic {
         .value-time{
           font-size: 36px;
           line-height: 36px;
-          color: #ec6aec;
+          color: $primary-color;
           letter-spacing: 0.2em;
           font-family: $heading-font;
           font-weight: 700;
