--- a/wp-content/themes/wingman/assets/css/woocommerce.css
+++ b/wp-content/themes/wingman/assets/css/woocommerce.css
@@ -1865,7 +1865,8 @@ body .mCSB_scrollTools {
  * Products carousel tab
  */
 .woocommerce-products-carousel-tab {
-  margin-bottom: 30px; }
+  margin: 0 auto 30px;
+  max-width: 1720px; }
   .woocommerce-products-carousel-tab ul.block-heading-tabs {
     padding: 0;
     margin: 0 0 55px;
