--- a/wp-content/themes/wingman/assets/css/woocommerce.scss
+++ b/wp-content/themes/wingman/assets/css/woocommerce.scss
@@ -2050,7 +2050,8 @@ body{
  * Products carousel tab
  */
 .woocommerce-products-carousel-tab{
-  margin-bottom: 30px;
+  margin: 0 auto 30px;
+  max-width: 1720px;
   ul.block-heading-tabs {
     padding: 0;
     margin: 0 0 55px;
