--- a/wp-content/themes/wingman/assets/css/_variables.scss
+++ b/wp-content/themes/wingman/assets/css/_variables.scss
@@ -37,6 +37,7 @@ $border-third-color: #e8e8e8;
 $border-dark-color: #363636;
 $border-third-color: #dfdfdf;
 $border-header-tabs: #ed727c;
+$border-image: #ebebeb;
 
 $nav-bg: #1e1e1e;
 
