--- a/wp-content/themes/wingman/assets/css/style.css
+++ b/wp-content/themes/wingman/assets/css/style.css
@@ -806,7 +806,8 @@ select:not([multiple]) {
       -o-box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
       box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
       line-height: normal;
-      visibility: hidden; }
+      visibility: hidden;
+      z-index: 99; }
     #main-navigation > li ul.sub-menu-dropdown {
       width: 300px;
       list-style: none;
@@ -2197,13 +2198,13 @@ article.post-item {
 .form-allowed-tags {
   display: none; }
 
-#commentform textarea, #commentform input[type="text"] {
-  padding: 15px 0;
+#commentform textarea,
+#commentform input[type="text"] {
+  padding: 0 0 15px;
   color: #707070;
   border: none;
   border-bottom: 1px solid #e5e5e5;
-  height: auto;
-  line-height: normal; }
+  height: auto; }
 #commentform .form-submit {
   margin-top: 60px; }
   #commentform .form-submit input#submit {
@@ -2520,6 +2521,62 @@ article.post-item.post-layout-classic {
   top: -30px; }
 .wpb_single_image .creative-right .creative-inner:after {
   bottom: 30px; }
+.wpb_single_image .creative-hover {
+  position: relative; }
+  .wpb_single_image .creative-hover:before, .wpb_single_image .creative-hover:after {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    bottom: 30px;
+    left: 30px;
+    content: '';
+    filter: alpha(opacity=0);
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    -webkit-opacity: 0;
+    -khtml-opacity: 0;
+    -moz-opacity: 0;
+    -ms-opacity: 0;
+    -o-opacity: 0;
+    opacity: 0;
+    -webkit-transition: all 0.4s ease-in-out 0s;
+    -khtml-transition: all 0.4s ease-in-out 0s;
+    -moz-transition: all 0.4s ease-in-out 0s;
+    -ms-transition: all 0.4s ease-in-out 0s;
+    -o-transition: all 0.4s ease-in-out 0s;
+    transition: all 0.4s ease-in-out 0s; }
+  .wpb_single_image .creative-hover:before {
+    border-top: 3px solid #000000;
+    border-bottom: 3px solid #000000;
+    -webkit-transform: scale(0, 1);
+    -khtml-transform: scale(0, 1);
+    -moz-transform: scale(0, 1);
+    -ms-transform: scale(0, 1);
+    -o-transform: scale(0, 1);
+    transform: scale(0, 1); }
+  .wpb_single_image .creative-hover:after {
+    border-right: 3px solid #000000;
+    border-left: 3px solid #000000;
+    -webkit-transform: scale(1, 0);
+    -khtml-transform: scale(1, 0);
+    -moz-transform: scale(1, 0);
+    -ms-transform: scale(1, 0);
+    -o-transform: scale(1, 0);
+    transform: scale(1, 0); }
+  .wpb_single_image .creative-hover:hover:before, .wpb_single_image .creative-hover:hover:after {
+    -webkit-transform: scale(1);
+    -khtml-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+    filter: alpha(opacity=100);
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    -webkit-opacity: 1;
+    -khtml-opacity: 1;
+    -moz-opacity: 1;
+    -ms-opacity: 1;
+    -o-opacity: 1;
+    opacity: 1; }
 
 /* Custom VC Icon */
 /*
@@ -2741,6 +2798,12 @@ article.post-item.post-layout-classic {
     .testimonial-carousel-wrapper .owl-carousel-kt .owl-pagination .owl-page.active img, .testimonial-carousel-wrapper .owl-carousel-kt .owl-pagination .owl-page:hover img {
       filter: none;
       -webkit-filter: grayscale(0%); }
+
+/**
+* 5.1. Single image
+**/
+.clients-carousel-wrapper {
+  text-align: center; }
 
 /**
 * 5.1. Single image
